test-data/v2/bgppeer-global.yaml
apiVersion: projectcalico.org/v2
kind: BGPPeer
metadata:
 name: globalpeer.name5
spec:
 peerIP: 1.1.1.1
 asNumber: 63444
