test-data/v2/bgppeer-node.yaml
apiVersion: projectcalico.org/v2
kind: BGPPeer
metadata:
 name: arbitrary.name
spec:
 node: rack1-host1
 peerIP: 192.168.1.1
 asNumber: 63400
