test-data/v2/ippool.yaml
apiVersion: projectcalico.org/v2
kind: IPPool
metadata:
 name: random.name5
spec:
 cidr: 1.1.10.10/16
 ipip:
   mode: CrossSubnet
 nat-outgoing: true
 disabled: false
